# grpc-demo-rs

./: Cargo.toml
demo1/: Cargo.toml
demo1/logs/: bot.log.2025-02-05-08  bot.log.2025-02-05-09  bot.log.2025-02-06-02
demo1/src/: config.rs  lib.rs  logger.rs  main.rs  monitor.rs
demo2/: Cargo.toml
demo2/src/common/: mod.rs  yellowstone_grpc.rs
