[workspace]
members = ["demo1"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1"
maplit = "1.0.2"
anyhow = "1.0.95"
chrono = "0.4.39"
futures = "0.3.31"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.0"
yellowstone-grpc-client = "4.1.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
yellowstone-grpc-proto =  { version = "4.1.1",features = ["plugin"] }
