[package]
name = "grpc-demo1"
version = "0.1.0"
edition = "2021"

[dependencies]
maplit = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
yellowstone-grpc-client = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
yellowstone-grpc-proto =  { workspace = true }
