[package]
name = "demo2"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic={ workspace = true }
maplit = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
yellowstone-grpc-client = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
yellowstone-grpc-proto =  { workspace = true }
bs58 ={ workspace = true }
